namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-electronic-monitoring-for-probation-officers-ui-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-electronic-monitoring-for-probation-officers-ui
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "public-em-data-for-probation-officers"
    cloud-platform.justice.gov.uk/slack-alert-channel: "em-probation-dev-notifications"
    cloud-platform.justice.gov.uk/application: "Electronic Monitoring for probation officers"
    cloud-platform.justice.gov.uk/owner: "HMPPS Electronic Monitoring for Probation: shah.hussain@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-electronic-monitoring-for-probation-officers-ui"
    cloud-platform.justice.gov.uk/team-name: "hmpps-em-probation"
